prevent video from cropping

--- a/public/style.css
+++ b/public/style.css
@@ -22,7 +22,7 @@ h1 {
 }
 .videos video {
   width: 100%;
-  height: 100%;
+  height: auto;
   object-fit: cover;
 }
 .chat {
